Fixed incorrect rendering of search field on mobile safari
Mobile Safari shows inner shadow in the field
https://stackoverflow.com/questions/3062968/remove-textarea-inner-shadow-on-mobile-safari-iphone

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -253,6 +253,8 @@ body {
   border: 1px solid hsla(0, 0% ,0%, 0.01);
   color: hsla(0, 0% ,0%, 0.85);
   padding: 0 0 0 3px;
+  // Mobile Safari shows inner shadow in the field
+  -webkit-appearance: none;
 }
 
 .search-box:focus {
